# OpenGL

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
src/: init.cpp  internal.h  main.cpp  window.h
src/Platform/: glfwWindow.cpp  glfwWindow.h
